--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <script>
         // 🔹 Firebase Config (তোমার Firebase Console থেকে নিয়ে আসতে হবে)
         const firebaseConfig = {
-            apiKey: "তোমার_API_KEY",
-            authDomain: "তোমার_PROJECT_ID.firebaseapp.com",
-            projectId: "তোমার_PROJECT_ID",
-            storageBucket: "তোমার_PROJECT_ID.appspot.com",
+            apiKey: "AlzaSyAVRUkZh7vPlyJ7RtKtk2lxElZNNPYB7JA",
+            authDomain: "incomewebsite-9032c.firebaseapp.com",
+            projectId: "https://incomewebsite-9032c-default-rtdb.firebaseio.com/",
+            storageBucket: "incomewebsite-9032c.appspot.com",
             messagingSenderId: "তোমার_SENDER_ID",
             appId: "তোমার_APP_ID"
         };
