--- a/index.html
+++ b/index.html
@@ -3,27 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ID Activation</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
-<link rel="stylesheet" href="style.css">
+    <title>Bot Information</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="popup">
-        <h2>ID Activation</h2>
-        <p>আপনার একাউন্ট অ্যাক্টিভ করতে <b>১০০ টাকা</b> পাঠান এবং নিচে তথ্য পূরণ করুন।</p>
-        <div class="payment-options">
-            <button onclick="showNumber('nagad')">নগদ</button>
-            <button onclick="showNumber('bkash')">বিকাশ</button>
-        </div>
-        <p id="payment-number" onclick="copyNumber()" style="display: none;"></p>
-        <input type="text" id="user-number" placeholder="আপনার মোবাইল নাম্বার">
-        <input type="text" id="transaction-id" placeholder="ট্রানজেকশন আইডি">
-        <button id="submit-btn" onclick="submitForm()">Submit</button>
-        <div id="loading" class="loading-spinner" style="display: none;"></div>
-    </div>
+    <div class="info-container">
+        <h1>🔹 আমাদের বট সম্পর্কে 🔹</h1>
+        <p>আমাদের বটে ইনকাম করা খুবই সহজ। এখানে আপনি <b>টাস্ক কমপ্লিট</b> করে ইনকাম করতে পারবেন।  
+        প্রতিদিনের জন্য রয়েছে <b>ডেইলি বোনাস</b> সিস্টেম, যা আপনাকে অতিরিক্ত আয়ের সুযোগ দেবে।  
+        এছাড়াও আমাদের বটে প্রতি রেফারে <b>৮ টাকা</b> করে দেওয়া হয়।</p>
 
-    <script src="app.js"></script> 
+        <h2>🔹 কেন আমাদের বট বেছে নিবেন? 🔹</h2>
+        <ul>
+            <li>✅ ১০০% পেমেন্ট প্রুফ</li>
+            <li>❌ কোনো স্ক্যাম নেই</li>
+            <li>💸 ডাইরেক্ট পেমেন্ট সিস্টেম</li>
+            <li>🎁 প্রতিদিনের বোনাস ইনকাম</li>
+            <li>🔖 সহজে টাস্ক কমপ্লিট সিস্টেম</li>
+            <li>👥 ইতোমধ্যে অনেক ব্যবহারকারী সফলভাবে আয় করছে</li>
+        </ul>
+
+        <h2>🔹 How it Works 🔹</h2>
+        <p>Our bot rewards you with <b>8 Taka</b> for each referral.  
+        Earn additional income by completing <b>daily tasks</b> and receiving <b>bonus rewards</b> every day.  
+        Enjoy a <b>100% payment proof</b> system and transparent earnings.</p>
+
+        <div class="join-btn">
+            <a href="https://t.me/Income_zone0e_bot?start=r00162070985" target="_blank">🚀 Join Our Bot 🚀</a>
+        </div>
+
+        <footer>
+            <p>© 2025 Income Zone | All Rights Reserved</p>
+        </footer>
+    </div>
 </body>
 </html>
